Added tests for new fields and fixed some minor issues